test/conformance/chainsaw/exceptions/exclude-image-references/good.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test-good
  name: skipped-1
  namespace: exclude-image-references
spec:
  containers:
  - image: ghcr.io/chipzoller/zulu:v0.0.14@sha256:476b21f1a75dc90fac3579ee757f4607bb5546f476195cf645c54badf558c0db
    name: test-good
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test-good
  name: skipped-2
  namespace: exclude-image-references
spec:
  containers:
  - image: ghcr.io/kyverno/test-verify-image:signed
    name: test-good
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
